--- a/booth.qsf
+++ b/booth.qsf
@@ -63,5 +63,6 @@ set_global_assignment -name VHDL_FILE mux.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
 set_global_assignment -name VHDL_FILE machine.vhd
 set_global_assignment -name VHDL_FILE shift.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/mateu/Documents/booth/multiplicadorBooth/Waveform.vwf"
+set_global_assignment -name VHDL_FILE booth_top.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
